--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
         <div class="timer">00:00:00</div>
         <div class="buttons">
             <div class="play">
-                <img src="./media/play-fill.png" alt="">
+                <img src="./media/play-fill.png" id="playImg" alt="">
             </div>
             <div class="reset">
                 <img src="./media/arrow-go-back-line.png" alt="">
             </div>
         </div>
     </div>
-
 
     <script src="main.js"></script>
 
